# fajr

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  limine.conf
builder/: Cargo.toml
builder/src/: main.rs
kernel/: Cargo.toml  Makefile  build.rs  linker-x86_64.ld
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  console.rs  main.rs  memory.rs  mp.rs  paging.rs  panic.rs  psf2.rs  requests.rs  screen.rs
kernel/src/allocators/: buddy_allocator.rs  first_fit_allocator.rs  mod.rs  page_allocator.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: cpu.rs  gdt.rs  idt.rs  interrupts.rs  io_apic.rs  io_ports.rs  ioapic.rs  linker.ld  local_apic.rs  mod.rs  msr.rs  paging.rs  pic.rs  tss.rs
