[package]
name = "fajr_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.4"
spin = "0.10.0"

[[bin]]
name = "fajr_kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false
